Update Work “example1”

--- a/content/work/example1.mdx
+++ b/content/work/example1.mdx
@@ -5,8 +5,7 @@ date: 2020-06-03
 tags:
   - news
 ---
-
-## The standard Lorem Ipsum passage
+## The standard Lorem Ipsum
 
 "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
 incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
