refactor: move heading to title

--- a/content/work/example1.mdx
+++ b/content/work/example1.mdx
@@ -1,12 +1,10 @@
 ---
 slug: example1
-title: Lorem Ipsum
+title: The standard Lorem Ipsum
 tags:
   - news
   - feature
 ---
-
-## The standard Lorem Ipsum
 
 "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
 incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
