--- a/content/work/example2.mdx
+++ b/content/work/example2.mdx
@@ -1,11 +1,9 @@
 ---
 slug: example2
-title: Lorem Ipsum
+title: written by Cicero in 45 BC
 tags:
   - blog
 ---
-
-## written by Cicero in 45 BC
 
 "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
 doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
