--- a/content/work/example3.mdx
+++ b/content/work/example3.mdx
@@ -1,11 +1,9 @@
 ---
 slug: example3
-title: Lorem Ipsum
+title: 1914 translation by H. Rackham
 tags:
   - review
 ---
-
-## 1914 translation by H. Rackham
 
 "But I must explain to you how all this mistaken idea of denouncing pleasure and
 praising pain was born and I will give you a complete account of the system, and
