Update Work “news-report-loans-important-arts-organisations”

--- a/content/work/news-report-loans-important-arts-organisations.mdx
+++ b/content/work/news-report-loans-important-arts-organisations.mdx
@@ -5,6 +5,8 @@ title: Loans to become increasingly important for arts organisations
 description: This news piece summarising recent research into the financial
   viability of loans for arts organisations was published in ArtsProfessional.
 date: 2022-12-30T20:22:27.346Z
+tags:
+  - news
 ---
 Arts and cultural organisations in the UK are “warming up” to the idea of loans, and other forms of repayable finance, according to a new piece of research.
 
