Update Work “news-fund-promote-learning-arts-schools”

--- a/content/work/news-fund-promote-learning-arts-schools.mdx
+++ b/content/work/news-fund-promote-learning-arts-schools.mdx
@@ -14,24 +14,4 @@ The [Teacher Development Fund](https://www.phf.org.uk/funds/tdf/) (TDF) will i
 
 The programme aims to address a confidence and skills gap preventing teachers from delivering effective arts-based teaching, and will build upon and apply best practice in Continuing Professional Development and Learning (CPDL).
 
-It follows on from a successful pilot, which found that helping teachers to adopt arts-based techniques was an effective way of teaching children a range of subjects and skills, from Shakespeare and storytelling to foreign languages and numeracy.
-
-Each year TDF will award five grants of up to £150k for two-year projects that involve one or more arts organisation and between five and ten schools.
-
-PHF has said it will prioritise applications “that support pupils experiencing disadvantage and those that demonstrate co-construction of content as part of an effective partnership”.
-
-### Pilot learning
-
-A two-year pilot of the fund saw [seven projects receive support](https://www.artsprofessional.co.uk/news/new-fund-support-arts-training-primary-teachers) in June 2016. These involved the Royal Shakespeare Company sharing rehearsal room techniques to teach Shakespeare to primary schoolchildren, and orchestral musicians helping schools in South West Wales use music to teach modern foreign languages.
-
-An independent evaluation of the pilot programme found the projects were leading to an increase in pupils’ confidence, skills and creativity, and teachers were becoming more confident in using arts-based approaches.
-
-Produced by the Centre for the Use of Research and Evidence in Education, [the evaluation report](https://www.phf.org.uk/publications/teacher-development-fund-year-1-pilot-evaluation/) notes: “Learning through the arts can engage and inspire children, support their key educational outcomes, and enable them to develop skills for life beyond school”.
-
-The report highlights ways to optimise teacher learning by engaging school leaders and encouraging reflective practice. It recommends supporting teachers to become autonomous in their delivery of arts-based learning by minimising direct contact between artist practitioners and pupils.
-
-The evaluators also found a greater need for the artist practitioners involved in the projects to undergo CPDL, particularly in relation to the school curriculum and as coaches for teachers. It recommends future projects position all participants as ‘co-learners’.
-
-“After three years of research, development and piloting, we’re delighted to launch the Teacher Development Fund,” said Catherine Sutton, Senior Grants Manager at PHF. “By funding schools to partner with cultural organisations, TDF will enable teachers to gain access to high-quality CPDL from artist practitioners and allow schools and arts organisations to work collaboratively in order to embed arts-based learning in the primary curriculum.”
-
-The first annual application deadline for the fund is 23 March 2018, for projects delivered between September 2018 and July 2020.
+It follows on from a successful pilot, which found that helping teachers to adopt arts-based techniques was an effective way of teaching children a range of subjects and skills, from Shakespeare and storytelling to foreign languages and numeracy... *[Keep reading on ArtsProfessional](https://www.artsprofessional.co.uk/news/new-fund-promote-learning-through-arts-schools)*
