Update Work “feature-whose-ethics-anyway”

--- a/content/work/feature-whose-ethics-anyway.mdx
+++ b/content/work/feature-whose-ethics-anyway.mdx
@@ -14,7 +14,7 @@ The survey asked about sponsorship and major donations in relation to four broad
 
 ### Whose values?
 
-The revealing responses disclose arts workers’ personal values. “Animal ‘testing’ may include genuinely beneficial research using animals under Home Office licence,” says one respondent. Another points out that while it may be appropriate to accept sponsorship from a Champagne or gin brand for some of an orchestra’s work, it probably shouldn’t support its children’s programmes. Some activities are judged more ‘unethical’ than others – but there’s little agreement on the hierarchy.
+The revealing responses disclose arts workers’ personal values. “Animal ‘testing’ may include genuinely beneficial research using animals under Home Office licence,” says one respondent. Another points out that while it may be appropriate to accept sponsorship from a Champagne or gin brand for some of an orchestra’s work, it probably shouldn’t support its children’s programmes. Some activities are judged more ‘unethical’ than others – but there’s little agreement on the hierarchy... *[Keep reading on ArtsProfessional](https://www.artsprofessional.co.uk/magazine/article/whose-ethics-are-they-anyway)*
 
 According to one respondent, “the main issue is what is the sponsor expecting in return.” Another asks: “Where do you stop? Do you start by asking the patrons where they work and who pays their wages?”
 
