Update Work “exhibition-review-dig-daniel-silver”

--- a/content/work/exhibition-review-dig-daniel-silver.mdx
+++ b/content/work/exhibition-review-dig-daniel-silver.mdx
@@ -6,6 +6,7 @@ description: This review was published in Time Out London.
 date: 2022-12-30T20:16:21.140Z
 tags:
   - review
+  - arts-culture
 ---
 I wish I'd had the chance to discover this exhibition by accident.
 
