Update Work “exhibition-review-ernesto-neto”

--- a/content/work/exhibition-review-ernesto-neto.mdx
+++ b/content/work/exhibition-review-ernesto-neto.mdx
@@ -7,7 +7,7 @@ description: "This exhibition review was written for Mouth London magazine. "
 date: 2022-12-30T19:44:59.137Z
 tags:
   - review
-  - feature
+  - arts-culture
 ---
 The Edges of the World appear to be curiously located somewhere between the imagination of a science fiction author and the artificial reality of an animated children’s television programme, but they can be found, in vivid and tactile three-dimensional reality, projected straight from the mind of Ernesto Neto, sprawled across the top floor of the Hayward Gallery on London’s South Bank.
 
