Update Work “exhibition-review-kerry-tribe-camden-art-centre”

--- a/content/work/exhibition-review-kerry-tribe-camden-art-centre.mdx
+++ b/content/work/exhibition-review-kerry-tribe-camden-art-centre.mdx
@@ -6,6 +6,7 @@ description: This review was written for Mouth London magazine.
 date: 2022-12-30T20:09:39.375Z
 tags:
   - review
+  - arts-culture
 ---
 A thin, black strip of audiotape, secured flush against the wall, whips round the gallery space and back again between two reel-to-reel decks, its movement almost undetectable. The speaker at one end emits the recorded memories of Milton Torres, a Cold-War pilot who was sent on a mission in 1957 to shoot down a UFO over Norwich. At the other end, the speaker emits static, revealing that as one deck writes sound the other erases it, in a perpetual cycle of sound and silence; the remembered and the forgotten; existence and absence. 
 
