Update Work “feature-whose-ethics-anyway”

--- a/content/work/feature-whose-ethics-anyway.mdx
+++ b/content/work/feature-whose-ethics-anyway.mdx
@@ -7,6 +7,8 @@ description: This feature article on the ethics of arts sponsorship and
 date: 2022-12-30T20:19:12.063Z
 tags:
   - feature
+  - arts-culture
+  - review
 ---
 If one thing is clear from [the results of AP’s latest Pulse survey on the ethics of sponsorship](https://www.artsprofessional.co.uk/pulse/survey-report/pulse-report-ethics-arts-sponsorship-risks-accepting-money), then it is that ‘Take the money and run’ is not a viable policy for arts organisations. Arts workers are almost unanimous in their call for organisations to consider the actions and motives of potential supporters before accepting their money. Even those who argue it is possible to turn ‘bad money into good’ Robin Hood-style, think it unwise to welcome any and all offers with open arms.
 
