Update Work “marketing-copy-12-last-songs”

--- a/content/work/marketing-copy-12-last-songs.mdx
+++ b/content/work/marketing-copy-12-last-songs.mdx
@@ -5,6 +5,9 @@ title: 12 Last Songs
 description: Marketing copy written for a 12-hour performance piece by theatre
   company Quarantine.
 date: 2022-12-30T20:51:24.871Z
+tags:
+  - marketing
+  - arts-culture
 ---
 *Nice to meet you. What do you do?*
 
