Update Work “marketing-copy-photography-exhibition-lived-in-rooms”

--- a/content/work/marketing-copy-photography-exhibition-lived-in-rooms.mdx
+++ b/content/work/marketing-copy-photography-exhibition-lived-in-rooms.mdx
@@ -4,7 +4,9 @@ priority: 80
 title: "Exhibition: Lived-In Rooms"
 description: Marketing copy written for a photography exhibition.
 date: 2022-12-30T20:43:11.750Z
-tags: []
+tags:
+  - marketing
+  - arts-culture
 ---
 *From June Street to Irwell Riverside - a photographic dialogue on home, city living and portraiture.*
 
