Update Work “marketing-copy-the-people-of-audio-walk”

--- a/content/work/marketing-copy-the-people-of-audio-walk.mdx
+++ b/content/work/marketing-copy-the-people-of-audio-walk.mdx
@@ -5,6 +5,9 @@ title: "Audio walk: The people of"
 description: Marketing copy written for an audio walk created by theatre company
   Quarantine in Manchester, UK.
 date: 2022-12-30T20:48:26.502Z
+tags:
+  - marketing
+  - arts-culture
 ---
 *An extraordinary walk, through familiar streets.*
 
