Update Work “news-arts-council-wales-deepen-links-nhs”

--- a/content/work/news-arts-council-wales-deepen-links-nhs.mdx
+++ b/content/work/news-arts-council-wales-deepen-links-nhs.mdx
@@ -7,6 +7,8 @@ description: This news piece about recent research into arts and health in Wales
 date: 2022-12-30T20:24:29.764Z
 tags:
   - news
+  - arts-culture
+  - feature
 ---
 The Arts Council of Wales (ACW) has outlined its intention to establish deeper links between the arts and healthcare services.
 
