Update Work “restaurant-review-gardeners-cottage-edinburgh”

--- a/content/work/restaurant-review-gardeners-cottage-edinburgh.mdx
+++ b/content/work/restaurant-review-gardeners-cottage-edinburgh.mdx
@@ -6,6 +6,7 @@ description: This review was written for my personal blog.
 date: 2022-12-30T20:04:34.150Z
 tags:
   - review
+  - Food
 ---
 I’ve been reading Margaret Atwood’s dystopian novel ‘The Year of the Flood’, in which a cult of ‘gardeners’ find enlightenment through clean, simple living and respect for nature. Perhaps it has coloured my expectations of The Gardener’s Cottage a little. There’s something eerily familiar in this humble little house, surrounded by lovingly tended vegetable patches. Its exterior symmetry is as seductive as the philosophy you find within: fresh, seasonal produce, cooked with care and served on long communal wooden tables. So, as I walk up the garden path on a dreary Sunday evening to sample the seven-course set menu, I keep my high hopes quiet and prepare to resist indoctrination. 
 
