--- a/content/work/news-arts-council-wales-deepen-links-nhs.mdx
+++ b/content/work/news-arts-council-wales-deepen-links-nhs.mdx
@@ -8,7 +8,7 @@ date: 2022-12-30T20:24:29.764Z
 tags:
   - news
   - arts-culture
-  - feature
+  - health
 ---
 The Arts Council of Wales (ACW) has outlined its intention to establish deeper links between the arts and healthcare services.
 
