Update Work “news-arts-sector-demands-answers-funding-wise-children”

--- a/content/work/news-arts-sector-demands-answers-funding-wise-children.mdx
+++ b/content/work/news-arts-sector-demands-answers-funding-wise-children.mdx
@@ -8,6 +8,7 @@ date: 2022-12-30T20:32:34.693Z
 tags:
   - news
   - feature
+  - arts-funding
 ---
 Arts Council England (ACE) has been forced to defend its decision to offer four-year funding to Emma Rice’s new theatre company, Wise Children, after an article criticising the move caused a Twitter storm.
 
