Update Work “news-fund-promote-learning-arts-schools”

--- a/content/work/news-fund-promote-learning-arts-schools.mdx
+++ b/content/work/news-fund-promote-learning-arts-schools.mdx
@@ -7,6 +7,9 @@ description: This news piece about a funding programme supporting the arts in
 date: 2022-12-30T20:30:53.192Z
 tags:
   - news
+  - education
+  - arts-culture
+  - arts-funding
 ---
 Cultural organisations and primary schools will be supported to work collaboratively to bring the arts into classrooms across the UK, following the launch of new fund by the Paul Hamlyn Foundation (PHF) this week.
 
