Update Work “recipe-chard-chickpeas-tahini-breadcrumbs”

--- a/content/work/recipe-chard-chickpeas-tahini-breadcrumbs.mdx
+++ b/content/work/recipe-chard-chickpeas-tahini-breadcrumbs.mdx
@@ -5,7 +5,8 @@ title: "Recipe: Chard and chickpeas with tahini sauce and breadcrumbs"
 description: This recipe was written as web content for a community greengrocer.
 date: 2022-12-30T19:58:01.486Z
 tags:
-  - feature
+  - food
+  - recipe
 ---
 I love this time of year. Sunny yellow daffodils are popping up everywhere and the first locally grown, leafy-green vegetables are appearing in the shops. 
 
