Update Work “news-report-loans-important-arts-organisations”

--- a/content/work/news-report-loans-important-arts-organisations.mdx
+++ b/content/work/news-report-loans-important-arts-organisations.mdx
@@ -7,6 +7,9 @@ description: This news piece summarising recent research into the financial
 date: 2022-12-30T20:22:27.346Z
 tags:
   - news
+  - arts-culture
+  - finance
+  - arts-funding
 ---
 Arts and cultural organisations in the UK are “warming up” to the idea of loans, and other forms of repayable finance, according to a new piece of research.
 
