Update Work “exhibition-review-dig-daniel-silver”

--- a/content/work/exhibition-review-dig-daniel-silver.mdx
+++ b/content/work/exhibition-review-dig-daniel-silver.mdx
@@ -2,7 +2,7 @@
 slug: exhibition-review-dig-daniel-silver
 priority: 82
 title: "Exhibition Review: 'DIG' by Daniel Silver"
-description: This review was published in Time Out London.
+description: Published in Time Out London.
 date: 2022-12-30T20:16:21.140Z
 tags:
   - review
