Update Work “exhibition-review-ernesto-neto”

--- a/content/work/exhibition-review-ernesto-neto.mdx
+++ b/content/work/exhibition-review-ernesto-neto.mdx
@@ -3,7 +3,7 @@ slug: exhibition-review-ernesto-neto
 priority: 84
 title: "Exhibition Review: ‘The Edges of the World’ by Ernesto Neto at the
   Hayward Gallery, London"
-description: "This exhibition review was written for Mouth London magazine. "
+description: "Written for Mouth London magazine. "
 date: 2022-12-30T19:44:59.137Z
 tags:
   - review
