--- a/content/work/exhibition-review-kerry-tribe-camden-art-centre.mdx
+++ b/content/work/exhibition-review-kerry-tribe-camden-art-centre.mdx
@@ -2,7 +2,7 @@
 slug: exhibition-review-kerry-tribe-camden-art-centre
 priority: 96
 title: "Exhibition Review: Kerry Tribe at Camden Art Centre"
-description: This review was written for Mouth London magazine.
+description: Written for Mouth London magazine.
 date: 2022-12-30T20:09:39.375Z
 tags:
   - review
