--- a/content/work/recipe-chard-chickpeas-tahini-breadcrumbs.mdx
+++ b/content/work/recipe-chard-chickpeas-tahini-breadcrumbs.mdx
@@ -2,7 +2,7 @@
 slug: recipe-chard-chickpeas-tahini-breadcrumbs
 priority: 90
 title: "Recipe: Chard and chickpeas with tahini sauce and breadcrumbs"
-description: This recipe was written as web content for a community greengrocer.
+description: Written as web content for a community greengrocer.
 date: 2022-12-30T19:58:01.486Z
 tags:
   - food
