Update Work “restaurant-review-gardeners-cottage-edinburgh”

--- a/content/work/restaurant-review-gardeners-cottage-edinburgh.mdx
+++ b/content/work/restaurant-review-gardeners-cottage-edinburgh.mdx
@@ -2,7 +2,7 @@
 slug: restaurant-review-gardeners-cottage-edinburgh
 priority: 94
 title: "Restaurant review: The Gardener's Cottage, Edinburgh"
-description: This review was written for my personal blog.
+description: Written for my personal blog.
 date: 2022-12-30T20:04:34.150Z
 tags:
   - review
