Update Work “feature-whose-ethics-anyway”

--- a/content/work/feature-whose-ethics-anyway.mdx
+++ b/content/work/feature-whose-ethics-anyway.mdx
@@ -2,8 +2,8 @@
 slug: feature-whose-ethics-anyway
 priority: 100
 title: Whose ethics are they anyway?
-description: This feature article on the ethics of arts sponsorship and
-  fundraising was published in ArtsProfessional magazine.
+description: A feature article on the ethics of arts sponsorship and
+  fundraising. Published in ArtsProfessional magazine.
 date: 2022-12-30T20:19:12.063Z
 tags:
   - feature
