Update Work “news-arts-council-wales-deepen-links-nhs”

--- a/content/work/news-arts-council-wales-deepen-links-nhs.mdx
+++ b/content/work/news-arts-council-wales-deepen-links-nhs.mdx
@@ -2,7 +2,7 @@
 slug: news-arts-council-wales-deepen-links-nhs
 priority: 86
 title: Arts Council of Wales to deepen links between NHS and arts
-description: A news piece about recent research into arts and health in Wale.
+description: A news piece about recent research into arts and health in Wales.
   Published in ArtsProfessional magazine.
 date: 2022-12-30T20:24:29.764Z
 tags:
