Update Work “news-arts-sector-demands-answers-funding-wise-children”

--- a/content/work/news-arts-sector-demands-answers-funding-wise-children.mdx
+++ b/content/work/news-arts-sector-demands-answers-funding-wise-children.mdx
@@ -2,8 +2,8 @@
 slug: news-arts-sector-demands-answers-funding-wise-children
 priority: 98
 title: Arts sector demands answers over funding of Wise Children
-description: This feature news piece covering a backlash against an arts funding
-  decision was published in ArtsProfessional.
+description: A feature news piece covering a backlash against an arts funding
+  decision. Published in ArtsProfessional.
 date: 2022-12-30T20:32:34.693Z
 tags:
   - news
