Update Work “news-fund-promote-learning-arts-schools”

--- a/content/work/news-fund-promote-learning-arts-schools.mdx
+++ b/content/work/news-fund-promote-learning-arts-schools.mdx
@@ -2,8 +2,8 @@
 slug: news-fund-promote-learning-arts-schools
 priority: 92
 title: New fund to promote learning through the arts in schools
-description: This news piece about a funding programme supporting the arts in
-  education was published in ArtsProfessional.
+description: A news piece about a funding programme supporting the arts in
+  education. Published in ArtsProfessional.
 date: 2022-12-30T20:30:53.192Z
 tags:
   - news
