Update Work “news-report-loans-important-arts-organisations”

--- a/content/work/news-report-loans-important-arts-organisations.mdx
+++ b/content/work/news-report-loans-important-arts-organisations.mdx
@@ -2,8 +2,8 @@
 slug: news-report-loans-important-arts-organisations
 priority: 88
 title: Loans to become increasingly important for arts organisations
-description: This news piece summarising recent research into the financial
-  viability of loans for arts organisations was published in ArtsProfessional.
+description: A news piece summarising recent research into the financial
+  viability of loans for arts organisations. Published in ArtsProfessional.
 date: 2022-12-30T20:22:27.346Z
 tags:
   - news
