--- a/content/work/losing-my-senses.mdx
+++ b/content/work/losing-my-senses.mdx
@@ -6,6 +6,8 @@ description: A feature on our senses of smell and taste - and how they can be
   compromised - written for 'Dining In', an exhibition at the Portico Library in
   Manchester.
 date: 2023-10-09T23:11:39.856Z
+tags:
+  - food
 ---
 “A man eats nothing without smelling it more or less consciously, while with unknown foods his nose acts always as the first sentinel, crying out Who goes there? When the sense of smell is cut off, taste itself is paralyzed...”
 
