Update Work “news-arts-sector-demands-answers-funding-wise-children”

--- a/content/work/news-arts-sector-demands-answers-funding-wise-children.mdx
+++ b/content/work/news-arts-sector-demands-answers-funding-wise-children.mdx
@@ -1,7 +1,7 @@
 ---
-slug: news-arts-sector-demands-answers-funding-wise-children
+slug: news-crisis-creative-scotland-following-funding-decision-backlash
 priority: 98
-title: Arts sector demands answers over funding of Wise Children
+title: Crisis at Creative Scotland following funding decision backlash
 description: A feature news piece covering a backlash against an arts funding
   decision. Published in ArtsProfessional.
 date: 2022-12-30T20:32:34.693Z
@@ -10,8 +10,50 @@ tags:
   - feature
   - arts-funding
 ---
-Arts Council England (ACE) has been forced to defend its decision to offer four-year funding to Emma Rice’s new theatre company, Wise Children, after an article criticising the move caused a Twitter storm.
+Two board members have resigned and public pressure is mounting on Scotland’s national arts funder, following its decision to cut funding to several organisations that work with children and disabled people.
 
-The article, [posted on ArtsProfessional](https://www.artsprofessional.co.uk/magazine/article/ps2m-arts-council-funding-emma-rices-new-company-everything-thats-wrong-arts) on Thursday, called into question ACE’s decision to approve an application for national portfolio funding for the company, which was officially formed just nine days before funding bids had to be registered with ACE, and for which Rice is the sole Director.
+Creative Scotland will hold an emergency board meeting today, following a backlash from the sector and criticism from Culture Secretary Fiona Hyslop about the way it handled cutting a number of organisations from its regular funding portfolio for 2018-21 [last week](https://www.artsprofessional.co.uk/news/creative-scotland-limits-cuts-following-funding-boost).
 
-The piece by AP journalist Christy Romer also challenged the legitimacy of the organisation being based in the South West, since it was officially registered in London and has announced it will be resident at London’s Old Vic theatre from 2018... *[Continue reading on ArtsProfessional](https://www.artsprofessional.co.uk/news/arts-sector-demands-answers-over-funding-wise-children)*
+An [open letter signed by 150 people](https://www.catherinewheels.co.uk/news/?id=97) has been sent to Creative Scotland calling for it to reconsider cutting children’s theatre company Catherine Wheels, which received an annual grant of £214k in the previous round. Meanwhile [50 disabled people](https://www.pastebucket.com/565208), including Inclusion Scotland's Director of Policy Bill Scott, wrote a separate letter to protest the cutting of Birds of Paradise and Lung Ha theatre companies, both of which support disabled artists.
+
+Birds of Paradise and Lung Ha were offered transition funding for six months, and Catherine Wheels is one of five touring theatre companies to be offered 12 months’ transition funding. Also among the five was Rapture Theatre, which described the decision as “irrational”.
+
+Catherine Wheels, which was initially recommended for a 9% regular funding increase, was “devastated” to be dropped from the portfolio at the last minute and told it was a better fit for a new £2m touring fund, which was also announced last week.
+
+### Devastated
+
+Culture Secretary Fiona Hyslop criticised Creative Scotland’s handling of the cuts [on Twitter](https://twitter.com/FionaHyslop/status/957227550689890304), saying “a lot of angst and worry” could have been avoided if the funder had been clearer with the companies about its commitment and funding plans.
+
+Expressing devastation that Creative Scotland was ending funding for disability-led theatre company Birds of Paradise’s, which amounted to £450k in 2015-18, Artistic Director Robert Softley Gale said: “It feels that these disabled stories aren’t meant to be part of the arts ecology in Scotland and that it is no longer a strategic priority to have an exemplar of a disabled led company.”
+
+Creative Scotland indicated it was meeting with Lung Ha and Birds of Paradise to explain its decision and discuss options for future funding. A spokesperson told [The Herald](http://www.heraldscotland.com/news/15903167.TV_stars_join_fight_to_stop_Creative_Scotland_funding_cuts_to_disabled/): “Creative Scotland is fully committed to supporting equalities, diversity and inclusion across all of our funding, including disabled artists and disability-led organisations.”
+
+### Emergency meeting
+
+Following the outcry, board members Ruth Wishart, a journalist, and theatre director Professor Maggie Kinloch have resigned, and will not be in attendance at Creative Scotland’s emergency meeting today.
+
+Describing the funder as “a family at war with many of those it seeks to serve,” Wishart, who joined the inaugural board over seven years ago, said board members had not been given sufficient time to make decisions and that she no longer wanted to back the funder’s “flawed” choices.
+
+The board meeting has been brought forward due to “the strength of views being presented”. Creative Scotland CEO Janet Archer said: “We will be taking stock of the decisions made regarding organisations not included in the regular funding network, and the options available.”
+
+“We are listening carefully to everything everyone is saying,” she added, stressing that any decisions would not affect the 116 organisations that have been awarded funding for 2018-21, or the transition arrangements.
+
+### Turbulent times
+
+Following [repeated warnings](https://www.artsprofessional.co.uk/news/creative-scotland-warns-number-regularly-funded-organisations-will-fall) over the past year that Creative Scotland would have to cut the number of organisations it supports through regular funding, [a surprise £7m a year boost](https://www.artsprofessional.co.uk/news/scotland-surprises-boosting-arts-budget-offset-lottery-decline) from the Scottish Government allowed it to maintain its current level of support. However, several organisations were dropped from the portfolio to make way for 19 new entrants.
+
+In [a blog post](http://ruthwishart.scot/blog/funding-scottish-arts-creatively) announcing her resignation, Wishart said: “If bodies such as Creative Scotland were merely to fund the same cohort time after time, there would be little opportunity for innovation from new bodies, and a danger of complacency from serial beneficiaries.”
+
+But she went on to say that the board has been through “a very turbulent few months”, following the death of its Chair Richard Findlay last July, and a [protracted period of funding uncertainty](https://www.artsprofessional.co.uk/news/creative-scotland-delays-regular-funding-decision-until-new-year) as the Scottish Government indicated it may be cut and returns from the National Lottery fell.
+
+Wishart emphasised that board members can only exercise proper scrutiny and judgement if given sufficient time to consider the information provided, but that this was not always given.
+
+She added: “Whilst you serve on a board, you are bound by the equivalent of collective cabinet responsibility. That is a perfectly sound principle. It also, however, causes you to reflect as to whether you can continue to back what you believe to be a flawed decision.”
+
+Ben Thomson was appointed Interim Chair of Creative Scotland following Findlay’s death, but a new permanent Chair is expected to be announced soon.
+
+Thomson thanked Wishart and Kinloch for the “significant contribution” they had made to the work of Creative Scotland and to arts and culture in Scotland.
+
+“This includes their contribution to our recently published decisions on Regular Funding 2018-21,” he added. “These decisions were arrived at through a clear and careful process, involving Creative Scotland’s highly dedicated specialist staff and leadership team, with final decisions being signed off unanimously by the board.”
+
+Creative Scotland will make a further announcement next week, following the board meeting.
